# ornament_symmgroups

./: CorrelationAnalysis.ipynb  GeoList.xlsx  Makefile  Matlab_HierarchicalClustering.m  Matlab_MDS.m  README.md  SimilaritySimulation.m  SimilaritySimulation_Run.m  SymmetrySimilarity_analysis.ipynb  SymmetrySimilarity_analysis_Preprints.ipynb  data_paper_Greek.xlsx  notebook_GreekPaper.ipynb  notebook_analysis_Preprints.ipynb  pyproject.toml  requirements.txt  symm_groups.xlsx
